--- a/astro/package.json
+++ b/astro/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^10.0.0",
     "lit": "^2.3.1",
     "prismjs": "^1.25.0"
+  },
+  "dependencies": {
+    "@astrojs/react": "^2.1.1"
   }
 }
