--- a/astro/tsconfig.json
+++ b/astro/tsconfig.json
@@ -2,5 +2,9 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
 }
