--- a/astro/package.json
+++ b/astro/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@astrojs/sitemap": "^0.1.0",
+    "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.3.0",
     "astro-sanity": "^1.0.0",
     "date-fns": "^2.23.0",
