mega final commit

--- a/astro/package.json
+++ b/astro/package.json
@@ -22,6 +22,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "@fontsource/courgette": "^4.5.9",
     "@fontsource/inter": "^4.5.15",
+    "@material-tailwind/react": "^2.1.2",
     "@vercel/analytics": "^1.0.2"
   }
 }
